--- a/styles.css
+++ b/styles.css
@@ -12,26 +12,18 @@ strong {
   display: inline;
 }
 
-.box {
+/*.box {
   background-color: tomato;
   height: 300px;
   width: 300px;
-  /*max-width: 600px;*/
   text-align: justify;
-  /*padding: 15px;*/
   padding: 15px;
   border: 3px solid #000;
   border-radius: 5px;
   display: inline-block;
-}
+}*/
 
-.ralph {
-  background-color: tomato;
-}
-.gary {
-  background-color: #71AB71;
-}
-
-.betty{
-  background-color: rgb(20, 138, 170);
+.box {
+  display: inline-block;
+  width: 300px;
 }
