--- a/styles.css
+++ b/styles.css
@@ -27,3 +27,10 @@ strong {
   display: inline-block;
   width: 300px;
 }
+
+.buttons {
+  text-align: center;
+  background-color: gold;
+  padding: 10px;
+  margin: 0px 0px 12px 0px;
+}
