--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,31 @@
 *{
+  text-align: center;
   box-sizing: border-box;
+}
+
+h1 {
+  color: white;
+  background-color: black;
+  text-align: center;
+  padding: 1px;
+}
+
+h3 {
+  margin: auto;
+  text-align: left;
+  width: auto;
+  background-color: #AAFFFB;
+  margin-top: 17px;
+  margin-bottom: 5px;
+  padding: 12px;
+}
+
+nav a {
+  padding: 10px;
+  text-decoration: none;
+  font-weight: bold;
+  color: white;
+  background-color: #DCDCDC;
 }
 
 body {
@@ -9,19 +35,17 @@ body {
 
 strong {
   font-weight: bold;
+  text-decoration: underline;
+  text-decoration-color: gold;
   display: inline;
 }
 
-/*.box {
-  background-color: tomato;
-  height: 300px;
-  width: 300px;
-  text-align: justify;
-  padding: 15px;
-  border: 3px solid #000;
-  border-radius: 5px;
-  display: inline-block;
-}*/
+.giant-box {
+  border: 20px;
+  margin: auto;
+  width: 912px;
+
+}
 
 .box {
   display: inline-block;
@@ -33,4 +57,11 @@ strong {
   background-color: gold;
   padding: 10px;
   margin: 0px 0px 12px 0px;
+}
+
+.footer {
+color: white;
+background-color: black;
+text-align: center;
+padding: 1px;
 }
